Clearing left for icons to fix overlapping.

--- a/_sass/_ethics.sass
+++ b/_sass/_ethics.sass
@@ -18,6 +18,7 @@
 
     figure
       float: left
+      clear: left
       margin-right: ms(1)
       text-align: left
       width: ms(9)
